--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,9 @@ jobs:
           java-version: '17'
           cache: 'gradle'
 
+      - name: Install dependencies
+        run: sudo apt-get update && sudo apt-get install -y libseccomp-dev
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
